Renaming and refactoring

--- a/src/test/ManagedProviderTest/ManagedProviderTest.csproj
+++ b/src/test/ManagedProviderTest/ManagedProviderTest.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
-    <AssemblyName>PervasiveDigital.Onboarding.Common</AssemblyName>
-    <OutputType>Library</OutputType>
-    <RootNamespace>PervasiveDigital.Onboarding.Common</RootNamespace>
+    <AssemblyName>ManagedProviderTest</AssemblyName>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ManagedProviderTest</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4ECB0F51-D6F4-4108-B430-1120CFF000B3}</ProjectGuid>
+    <ProjectGuid>{8F392CA9-D1F9-4E23-953D-FD8E5780FDC4}</ProjectGuid>
     <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
   </PropertyGroup>
@@ -29,13 +29,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IOnboardeeAuthProvider.cs" />
-    <Compile Include="IOnboarderAuthProvider.cs" />
-    <Compile Include="IWifiOnboardingSecurityProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Native" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\PervasiveDigital.Onboarding.ManagedSecurityProviders\PervasiveDigital.Onboarding.ManagedSecurityProviders.csproj">
+      <Project>{1667DA03-6579-438C-9D5D-06CA32FFA09D}</Project>
+      <Name>PervasiveDigital.Onboarding.ManagedSecurityProviders</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
