--- a/src/PervasiveDigital.Onboarding.ManagedSecurityProviders/PervasiveDigital.Onboarding.ManagedSecurityProviders.csproj
+++ b/src/PervasiveDigital.Onboarding.ManagedSecurityProviders/PervasiveDigital.Onboarding.ManagedSecurityProviders.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
-    <AssemblyName>DiffieHellmanTest</AssemblyName>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>DiffieHellmanTest</RootNamespace>
+    <AssemblyName>PervasiveDigital.Onboarding.ManagedSecurityProviders</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>PervasiveDigital.Onboarding.ManagedSecurityProviders</RootNamespace>
     <ProjectTypeGuids>{b69e3092-b931-443c-abe7-7e7b65f2a37f};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AD13CEBF-E668-40E8-A36C-79E9A32FA2A0}</ProjectGuid>
+    <ProjectGuid>{1667DA03-6579-438C-9D5D-06CA32FFA09D}</ProjectGuid>
     <TargetFrameworkVersion>v4.3</TargetFrameworkVersion>
     <NetMfTargetsBaseDir Condition="'$(NetMfTargetsBaseDir)'==''">$(MSBuildExtensionsPath32)\Microsoft\.NET Micro Framework\</NetMfTargetsBaseDir>
   </PropertyGroup>
@@ -28,30 +28,18 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BigInt.cs" />
+    <Compile Include="BlockTea.cs" />
+    <Compile Include="DiffieHellman.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+    <Compile Include="StrongNumberProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Native" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources.resx">
-      <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PervasiveDigital.Onboarding.DefaultSecurityProviders\PervasiveDigital.Onboarding.DefaultSecurityProviders.csproj">
-      <Project>{323B766F-3FF7-4F03-8684-C988979A4ADF}</Project>
-      <Name>PervasiveDigital.Onboarding.DefaultSecurityProviders</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
